Fixed some layout issues

--- a/assets/styles/application.css.less
+++ b/assets/styles/application.css.less
@@ -1,3 +1,7 @@
+* > {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
@@ -14,6 +18,14 @@ body {
   color: white;
   font-size: 20px;
   font-weight: bold;
+  height: 50px;
+}
+
+.graph-main {
+  position: absolute;
+  width: 100%;
+  top: 50px;
+  bottom: 0;
 }
 
 .element.html {
